# packstack-vagrant

./: .gitignore  .gitreview  LICENSE  README.rst  Vagrantfile  config.yaml.sample  playbook.yaml  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/: controller.yaml  initialize.yaml  network.yaml  nfs.yaml  proxy.yaml  storage.yaml
contrib/: config.ssh
doc/source/: conf.py  configuration.rst  contributing.rst  index.rst  initialization.rst  requirements.rst  usage.rst
files/: bootstrap.sh  disable_network_manager.sh  exports  gitconfig  hosts.j2  id_rsa  id_rsa.pub  ifcfg-br-ex.j2  ifcfg-enp0s9  initialize.sh  motd  openrc.j2  packstack.answers.j2  rally.sh  selinux  setup.sh  squid.conf
files/scripts/: nova_fake.sh  rally.sh  setup.sh  setup.sh.j2
packer/: .gitignore  centos-packstack-7.0.json  centos-packstack-7.1.json
packer/http/: ks.cfg
packer/scripts/: cleanup.sh  packstack.sh  sshd.sh  update.sh  vagrant.sh  vbox.sh
patches/: mongodb.pp  nova_compute_libvirt.pp
scripts/: bootstrap.sh  check_yaml_syntax.py  get_hosts.py  initialize.sh  reset.sh
