[metadata]
name = packstack-vagrant
summary = Vagrant environment providing a Packstack installation
description-file = README.rst
author = Christian Berendt
author-email = berendt@b1-systems.de
home-page = http://github.com/b1-systems/packstack-vagrant
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
